# AngbandPlus

./: .cproject  .cvsignore  .gitignore  .hgtags  .project  .svnignore  0.3.1bugfixes.txt  ANGBAND-.DOC  ANGBAND.INI  ANGBAND.PIF  ANGBAND.RC  ANGDOS.CFG  ARTIFACT patch changes.txt  AUTHORS  AUTHORS.txt  AlexAngband-09 Changes.txt  Angband-readme.txt  Angband.dsp  Angband.plg  Angband.vcproj  Angbandchanges.txt  BIGSCRN.BAT  BIGSCRN.PIF  BIRTH.C  BORG1.C  BORG1.H  BORG2.C  BORG2.H  BORG3.C  BORG3.H  BORG4.C  BORG4.H  BORG5.C  BORG5.H  BORG6.C  BORG6.H  BORG7.C  BORG7.H  BORG8.C  BORG8.H  (+685 more)
data/apex/: Makefile.am  Makefile.in
data/gfx/: Makefile.am  Makefile.in
data/save/: Makefile.am  Makefile.in
data/stat/: Makefile.am  Makefile.in
lib/apex/: .cvsignore  Deleteme.txt  Makefile  Makefile.am  Makefile.in  delete.me  logfile.txt  makefile.zb  readme.txt  scores.raw  tutorial  tutorial backup  z_scores.raw
lib/bone/: Aliesra.bne  Ayako.bne  Bone.060  Bone.075  Jaxom.bne  Makefile  Makefile.am  Makefile.in  bone.001  bone.002  bone.003  bone.004  bone.005  bone.006  bone.007  bone.008  bone.009  bone.010  bone.012  bone.015  bone.020  bone.025  bone.030  bone.033  bone.035  bone.040  bone.045  bone.047  bone.050  bone.055  bone.060  bone.065  bone.070  bone.075  bone.080  bone.085  bone.090  bone.095  bone.128  bone.129.129  (+45 more)
lib/data/: .cvsignore  Makefile  Makefile.am  Makefile.in  a_info.raw  artifact.raw  cost_adj.raw  delete.me  e_info.raw  ego_item.raw  f_info.raw  flavor.raw  k_info.raw  limits.raw  makefile.zb  monster.raw  object.raw  p_class.raw  p_hist.raw  p_race.raw  quest.raw  r_info.raw  remove.me  scores.raw  shop_own.raw  terrain.raw  tr_info.raw  v_info.raw  vault.raw  wf_info.raw
lib/edit/: .#k_info.txt.1.23  A_INFO.TXT  E_INFO.TXT  F_INFO.TXT  K_INFO.TXT  Makefile  Makefile.am  Makefile.in  Nmonster.txt  Q0000001.TXT  Q000CHAO.TXT  Q000DEKN.TXT  Q000ERIC.TXT  Q000LYEH.TXT  Q000NATU.TXT  Q000SORC.TXT  Q000STYG.TXT  Q1.txt  Q10.txt  Q100.txt  Q1000.txt  Q1001.txt  Q1002.txt  Q1003.txt  Q1004.txt  Q1005.txt  Q1006.txt  Q1007.txt  Q1009.txt  Q101.txt  Q1010.txt  Q1011.txt  Q1012.txt  Q1013.txt  Q102.txt  Q103.txt  Q104.txt  Q105.txt  Q106.txt  Q108.txt  (+742 more)
lib/file/: .#dead.txt  A_CURSED.TXT  A_HIGH.TXT  A_LOW.TXT  BOOK-20.TXT  BRAVADO.TXT  CHAINSWD.TXT  CRIME.TXT  DEATH.TXT  MONDEATH.TXT  MONFEAR.TXT  MONSPEAK.TXT  Makefile  Makefile.am  Makefile.in  NEWS.TXT  README!  README+  RUMORS.TXT  SILLY.TXT  W_MED.TXT  a_cursed.txt  a_cursed_j.txt  a_high.txt  a_high_j.txt  a_low.txt  a_low_j.txt  a_med.txt  a_med_j.txt  a_normal.txt  aa_med.txt  ab_med.txt  ac_med.txt  adject.txt  ag_med.txt  ah_med.txt  amu_cursed.txt  amu_high.txt  amu_low.txt  amu_med.txt  (+457 more)
lib/help/: .manual.htm.swp  308.txt  320.txt  BIRTH.TXT  CMDDESC.TXT  CMDORIG.TXT  CMDROGUE.TXT  Chaos_Patrons.txt  Classes.txt  Copie de newbs.txt  Copie de skills.txt  DJA11..txt  DJA110.txt  DJA112.txt  DJA130.txt  Demigods.txt  Demons.txt  Disciples.txt  Draconians.txt  DragonRealms.txt  Dragons.txt  FAQ.hlp  HELP.HLP  Makefile  Makefile.am  Makefile.in  MonsterRaces.txt  Oangband.hlp  Orcs.txt  Personalities.txt  README  Races.txt  Runeknights.txt  STORY.TXT  Skillmasters.txt  TANG.txt  THANKS  VARCMD.TXT  Warlocks.txt  Weaponmasters.txt  (+733 more)
lib/pref/: Copie de options.prf  Makefile  Makefile.am  Makefile.in  PLAYER.prf  ascii.prf  chargraf.prf  classes.prf  color.prf  colors.prf  default.prf  feat-x11.prf  flvr-dvg.prf  flvr-iso.prf  flvr-new.prf  flvr-nmd.prf  flvr-xxx.prf  font-ami.prf  font-dos.prf  font-gcu.prf  font-gtk.prf  font-ibm.prf  font-iso.prf  font-iso_ascii.prf  font-lfb.prf  font-mac.new  font-mac.prf  font-mon.prf  font-sdl-iso.prf  font-sdl-iso_features.prf  font-sdl-iso_flavors.prf  font-sdl-iso_monster.prf  font-sdl-iso_objects.prf  font-sdl.prf  font-vcs.prf  font-w2k.prf  font-win.prf  font-x11.prf  font-xxx.prf  font.prf  (+82 more)
lib/save/: 500.Ivan  501.Tmorton  Alex  Alia  Copie de jaxom  Flar  Makefile  Makefile.am  Makefile.in  NickDanger  PLAYER  Playe  Sorka-DragonRider-Winner-3.0.9(environ)  Test  Tina  bug  delete.me  jaxom  makefile.zb  note.txt  player  player_1  remove.me  t2  test  test2  tunnel  twink
src/: #makefile.linux#  .#main-sdl.c.1.19  .#main-sdl.c.1.21  .#main-sdl.c.1.22  .cproject  .cvsignore  .directory  .gitignore  .project  A-mac-h.pch  ANGBAND.RC  ANGBAND.RES  AltDaJAngband_private.h  AltDaJAngband_private.rc  AltDaJAngband_private.res  Angband.aps  Angband.dsp  Angband.dsw  Angband.icns  Angband.plg  Angband.prj  Angband.r  Angband.rc  Angband.xml  Angband65.dev  Animeband.rc  BIRTH.C  Birth.c  CAVE.C  CHANGELOG  CMD1.C  CMD2.C  CMD3.C  CMD4.C  CMD5.C  CMD6.C  CMakeLists.txt  CONFIG.H  CONTENTS  CORE  (+1573 more)
src/ other/: Makefile.bcc  Makefile.cyg
src/.deps/: attack.P  attack.Po  birth.P  birth.Po  cave.P  cave.Po  cmd-magic.Po  cmd-misc.Po  cmd-move-attack.Po  cmd-object.Po  cmd1.P  cmd1.Po  cmd2.P  cmd2.Po  cmd3.P  cmd3.Po  cmd4.P  cmd4.Po  cmd5.P  cmd5.Po  cmd6.P  cmd6.Po  dungeon.P  dungeon.Po  files.P  files.Po  game.Po  generate.P  generate.Po  info.P  info.Po  init.Po  init1.P  init1.Po  init2.P  init2.Po  l-misc.Po  l-monst.Po  l-object.Po  l-player.Po  (+96 more)
src/CVS/: Entries  Repository
src/SDL/: SDL.lib  SDL_image.lib  SDL_mixer.lib  SDL_ttf.lib  begin_code.h  freetype.lib  ftconfig.h
src/Visual C++ Express project/: npp.sln  npp.vcxproj  npp_vs2008.sln  npp_vs2008.vcproj
src/_SDL/: SDL_stdinc.h  freetype.lib
src/altern/: files.c  readme.txt
src/bcb6/: .gitignore  mangband.bpr  mangclient.bpr  mangclient_gcu.bpr  mangclient_sdl.bpr
src/boot/: CMakeLists.txt  angband.rc  boot.jamtk  main-boot.c
src/carbon/: Angband.icns  Carbon.r  Info.plist
src/client/: Makefile.am  Makefile.in  angband.h  autoconf.h.in  c-angband.h  c-birth.c  c-cmd-obj.c  c-cmd.c  c-cmd0.c  c-cmds.h  c-defines.h  c-externs.h  c-files.c  c-init.c  c-inven.c  c-obj-ui.c  c-option.c  c-option.h  c-player.c  c-player.h  c-spell.c  c-store.c  c-tables.c  c-util.c  c-variable.c  c-xtra.c  c-xtra1.c  c-xtra2.c  client.c  cmd-context.c  cmd-core.c  cmd-core.h  conf.c  conf.h  engines.c  (+115 more)
(+6411 files in other folders)
