dnl Process this file with autoconf to produce a configure script.

dnl Initialize autoconf - look for the existance of a file to make sure
dnl the source distribution is installed correctly.
AC_INIT(ironhells, 1.0a6)
AC_CONFIG_SRCDIR([src/client/main.c])
AM_INIT_AUTOMAKE

dnl write the resulting #defines into a header file
AC_CONFIG_HEADER(src/client/autoconf.h)

dnl AC_CANONICAL_HOST

AM_PROG_LIBTOOL

AM_MAINTAINER_MODE

dnl default option
GAMEGROUP="games"

AC_ARG_WITH(setgid,
[  --with-setgid=NAME      setgid usage: install ironhells as group NAME],
[case "${withval}" in
  no) GAMEGROUP="";;
  yes) AC_MSG_ERROR(missing argument for --with-setgid);;
  *) GAMEGROUP="$withval";;
esac])
AC_SUBST(GAMEGROUP)
AM_CONDITIONAL(SET_GID, test "$GAMEGROUP" != "")

AC_ARG_WITH(debug,
[  --with-debug=yes/no		enable debugging output],
[case "${withval}" in
  no) DEBUG=0;;
  yes) DEBUG=1;;
esac])
AC_DEFINE_UNQUOTED(DEBUG, $DEBUG, [Enable debugging output.])

AC_ISC_POSIX
AC_LANG_C
AC_PROG_CC
_AM_DEPENDENCIES(OBJC)
AC_STDC_HEADERS
dnl AC_ARG_PROGRAM
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET

basedir=`pwd`

dnl generate the installation path for the data (apex, data, media, lib, save)
dnl folders
game_datadir="$datadir/games/ironhells/"
AC_DEFINE_UNQUOTED(DATA_PATH, "$game_datadir", [Default path to game data])
DATA_PATH="$game_datadir"
AC_SUBST(DATA_PATH)

dnl Checks for programs.
AC_PROG_CC(gcc cc egcs)
AM_PROG_CC_C_O
AC_CHECK_TOOL(RANLIB, ranlib)

dnl -fno-strength-reduce prevents a bug in some versions of gcc
if test "$GCC" = yes; then
  CFLAGS="$CFLAGS -fno-strength-reduce"
fi

dnl Checks for libraries.
AC_CYGWIN
AC_MINGW32
AC_EXEEXT

AM_CONDITIONAL(CYGWIN, test "$CYGWIN" = "yes")

dnl Detect cygwin
case `(uname -s) 2>/dev/null` in
  *cygwin* ) CYGWIN=yes;;
  *CYGWIN* ) CYGWIN=yes;;
  * ) CYGWIN=no;;
esac

if test "$CYGWIN" = "yes"; then
  AC_DEFINE(WINDOWS, 1, [WIN32 port])
  LIBS="$LIBS -lwinmm"
  LDFLAGS="$LDFLAGS -s -mwindows -e _mainCRTStartup"
  cygwin="y"
  AC_SUBST(cygwin)
else
  echo ""
fi

AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h limits.h strings.h sys/file.h sys/ioctl.h \
	sys/time.h termio.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_FUNC_MEMCMP
AC_TYPE_SIGNAL
AC_FUNC_STRFTIME
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(gethostname mkdir select strstr strtol usleep mkstemp)

dnl A nice function to test compiler options (like warnings)
AC_DEFUN(AC_CHECK_CC_OPT,
[AC_MSG_CHECKING(whether ${CC-cc} accepts [$1])
echo 'void f(void); void f(){}' > conftest.c
if test -z "`${CC-cc} -c ${CFLAGS} $1 conftest.c 2>&1`"; then
  CFLAGS="$1 $CFLAGS"
  AC_MSG_RESULT($1)
else
  AC_MSG_RESULT(no $1)
fi
rm -f conftest*
])

dnl Check for lots of extra warning options
dnl AC_CHECK_CC_OPT(-pedantic)
dnl AC_CHECK_CC_OPT(-W)
dnl AC_CHECK_CC_OPT(-Wall)
AC_CHECK_CC_OPT(-Wmissing-prototypes)
AC_CHECK_CC_OPT(-Wmissing-declarations)
AC_CHECK_CC_OPT(-Wno-long-long)
AC_CHECK_CC_OPT(-Wwrite-strings)
AC_CHECK_CC_OPT(-Wpointer-arith)
AC_CHECK_CC_OPT(-Wbad-function-cast)
AC_CHECK_CC_OPT(-Waggregate-return)
AC_CHECK_CC_OPT(-Wstrict-prototypes)
AC_CHECK_CC_OPT(-Wredundant-decls)
dnl AC_CHECK_CC_OPT(-Wunreachable-code)
dnl AC_CHECK_CC_OPT(-Wchar-subscripts)
AC_CHECK_CC_OPT(-Wimplicit)
dnl AC_CHECK_CC_OPT(-Wparenthesis)
dnl AC_CHECK_CC_OPT(-Wsequence-point)
AC_CHECK_CC_OPT(-Wreturn-type)
dnl AC_CHECK_CC_OPT(-Wswitch)
dnl AC_CHECK_CC_OPT(-Wunused)
AC_CHECK_CC_OPT(-Wuninitialized)
AC_CHECK_CC_OPT(-Wundef)
dnl AC_CHECK_CC_OPT(-Wnested-externs)

AM_PATH_SDL

AC_CHECK_LIB(SDL_ttf, TTF_Init, [
	SDLTTF_CFLAGS=`sdl-config --cflags`
	SDLTTF_LIBS="`sdl-config --libs` -lSDL_ttf -lttf"
	AC_SUBST(SDLTTF_CFLAGS)
	AC_SUBST(SDLTTF_LIBS)
	], [
	echo "ERROR! SDL_ttf is required to build this project!"
	exit -1
	], [
	"`sdl-config --libs`"
	])

AC_CHECK_LIB(SDL_image, IMG_Load_RW, [
	SDLIMAGE_CFLAGS=`sdl-config --cflags`
	SDLIMAGE_LIBS="`sdl-config --libs` -lSDL_image"
	AC_SUBST(SDLIMAGE_CFLAGS)
	AC_SUBST(SDLIMAGE_LIBS)
	], [
	echo "ERROR! SDL_image is required to build this project!"
	exit -1
	])

AC_CHECK_LIB(SDL_draw, Draw_Init, [
	SDLDRAW_CFLAGS=`sdl-config --cflags`
	SDLDRAW_LIBS="`sdl-config --libs` -lSDL_draw"
	AC_SUBST(SDLDRAW_CFLAGS)
	AC_SUBST(SDLDRAW_LIBS)
	], [
	echo "ERROR! SDL_draw is required to build this project!"
	exit -1
	])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT([
data/font/Makefile
data/gfx/icon/large/Makefile
data/gfx/icon/medium/Makefile
data/gfx/icon/small/Makefile
data/gfx/icon/Makefile
data/gfx/misc/large/Makefile
data/gfx/misc/medium/Makefile
data/gfx/misc/small/Makefile
data/gfx/misc/Makefile
data/gfx/tile/Makefile
data/gfx/creature/player/dunadan/Makefile
data/gfx/creature/player/dwarf/Makefile
data/gfx/creature/player/elf/Makefile
data/gfx/creature/player/gnome/Makefile
data/gfx/creature/player/half-elf/Makefile
data/gfx/creature/player/half-orc/Makefile
data/gfx/creature/player/half-troll/Makefile
data/gfx/creature/player/high-elf/Makefile
data/gfx/creature/player/hobbit/Makefile
data/gfx/creature/player/human/Makefile
data/gfx/creature/player/kobold/Makefile
data/gfx/creature/player/Makefile
data/gfx/creature/Makefile
data/gfx/object/Makefile
data/gfx/screen/Makefile
data/gfx/Makefile
data/map/dungeon/Makefile
data/map/town/shop/Makefile
data/map/town/Makefile
data/map/Makefile
data/stat/item/artifact/Makefile
data/stat/item/ego/Makefile
data/stat/item/flavor/Makefile
data/stat/item/object/Makefile
data/stat/item/Makefile
data/stat/player/class/Makefile
data/stat/player/race/Makefile
data/stat/player/history/Makefile
data/stat/player/Makefile
data/stat/creature/Makefile
data/stat/dungeon/vault/Makefile
data/stat/dungeon/normal/Makefile
data/stat/dungeon/Makefile
data/stat/town/shop/Makefile
data/stat/town/wild/Makefile
data/stat/town/Makefile
data/stat/terrain/Makefile
data/stat/Makefile
data/apex/Makefile
data/save/Makefile
data/media/video/Makefile
data/media/sound/Makefile
data/media/music/Makefile
data/media/Makefile
data/script/Makefile
data/Makefile
lib/apex/Makefile
lib/bone/Makefile
lib/data/Makefile
lib/edit/Makefile
lib/file/Makefile
lib/help/Makefile
lib/info/Makefile
lib/pref/Makefile
lib/save/Makefile
lib/script/Makefile
lib/user/Makefile
lib/xtra/font/Makefile
lib/xtra/graf/Makefile
lib/xtra/Makefile
lib/Makefile
src/client/angband/Makefile
src/client/platform/mac/osx/Makefile
src/client/platform/mac/Makefile
src/client/platform/linux/Makefile
src/client/platform/win/Makefile
src/client/platform/Makefile
src/client/engines/3d/Makefile
src/client/engines/iso/Makefile
src/client/engines/Makefile
src/client/overlay/Makefile
src/client/render/Makefile
src/client/scene/Makefile
src/client/Makefile
src/lua/Makefile
src/server/Makefile
src/Makefile
])
